<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Plant_Variables" Id="{20ff19f5-e3ac-4116-a430-0956afe46498}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	Tank_Pressure			:	Pressure_Transducer;
	Input_Control_Valve		:	Control_Valve;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>