<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PID_Modes" Id="{d581c991-b2f3-4c37-aad4-eb78576eb110}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE PID_Modes :
(
	Manual 		:= 	0,
	Automatic	:=	1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>